public/styles/game_detail_style.css
/* Grundstil */
body {
    font-family: 'Press Start 2P', Arial, sans-serif;
    font-size: 10px;
    background-color: #ffffff;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    overflow: hidden; /* Vermeidet vertikales Scrollen */
}

header {
    background-color: #ffffff;
    text-align: center;
    padding: 20px;
    width: 100%;
    max-width: 1000px;
    margin: 0 auto 20px auto;
}

main {
    display: flex;
    justify-content: center; /* Zentriert die Inhalte horizontal */
    align-items: center; /* Zentriert die Inhalte vertikal */
    width: 100%;
    flex: 1; /* Nimmt den verfügbaren Platz zwischen Header und Footer ein */
    padding: 20px;
    box-sizing: border-box;
}

.game-detail-content-box {
    width: 50%; /* 50% der Bildschirmbreite */
    padding: 20px;
    border: 6px solid #ac35ff;
    background-color: #e7e7e7;
    font-family: 'Press Start 2P', Arial, sans-serif;
    box-shadow: 0 0 0 3px #161054, 6px 6px 0 0 #161054;
    text-align: center; /* Zentriert den Text */
    margin-bottom: 40px; /* Zusätzlicher Abstand nach unten */
}

footer {
    width: 100%;
    background-color: #333;
    color: white;
    text-align: center;
    padding: 10px 0;
    margin-top: auto; /* Schiebt den Footer ans Ende */
}

footer ul {
    list-style: none;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 0;
    margin: 0;
}

footer ul li {
    margin: 0 20px;
}

footer ul li a {
    color: white;
    text-decoration: none;
}

footer ul li a:hover {
    text-decoration: underline;
}

/* Entfernen des Strichs über dem Container */
header + main {
    border-top: none;
}

/* Buttons */
.button {
    padding: 10px 15px;
    font-size: 1em;
    cursor: pointer;
    border-radius: 0; 
    border: 4px solid #ac35ff;
    background-color: #ffd301;
    transition: transform 0.3s ease, background-color 0.3s ease;
    font-family: 'Press Start 2P', Arial, sans-serif;
    box-shadow: 0 0 0 2px #161054, 4px 4px 0 0 #161054;
    margin: 10px 0; /* Abstand zwischen den Buttons */
}

.button:hover {
    transform: scale(1.1);
    cursor: grab;
    box-shadow: 0 0 0 2px #161054, 6px 6px 0 0 #161054;
}

#language-button {
    padding: 10px 15px;
    font-size: 1em;
    cursor: pointer;
    margin-left: 20px;
    border-radius: 0;
    border: 4px solid #ac35ff;
    background-color: #ffd301;
    transition: transform 0.3s ease, background-color 0.3s ease;
    font-family: 'Press Start 2P', Arial, sans-serif;
    box-shadow: 0 0 0 2px #161054, 4px 4px 0 0 #161054;
}

#language-button:hover {
    transform: scale(1.1);
    cursor: grab;
    box-shadow: 0 0 0 2px #161054, 6px 6px 0 0 #161054;
}

/* Media Queries */
@media (max-width: 1024px) {
    header {
        max-width: 100%;
        margin: 0;
    }
    .game-detail-content-box {
        width: 90%; /* Passt die Breite für kleinere Bildschirme an */
    }
}

/* Dark Mode Styles */
body.dark-mode {
    background-color: #121212;
    color: #e0e0e0;
}

header.dark-mode {
    background-color: #121212;
}

.container.dark-mode,
#search-input.dark-mode, 
.button.dark-mode, 
.modal-content.dark-mode, 
.sideBox.dark-mode{
    background-color: #121212;
    box-shadow: 0 0 0 3px #161054, 6px 6px 0 0 #ffffff;
}
.content-box.dark-mode
.game-card.dark-mode, 
footer.dark-mode, 
.welcome-box.dark-mode {
    background-color: #1e1e1e;
    color: #ffffff;
    border-color: #ac35ff; /* Lila Farbe beibehalten */
    box-shadow: 0 0 0 2px #161054, 4px 4px 0 0 #ffffff; /* Lila Schatten beibehalten */
}
.game-detail-content-box.dark-mode {
    color: #ffffff; /* Schwarz für den Text innerhalb der Box */
    background-color: #000000;
}

.dark-mode .button {
    background-color: #ffd301; /* Gleiche Farbe wie im Light Mode */
    color: #000000;
    border-color: #ac35ff; /* Lila Farbe beibehalten */
    box-shadow: 0 0 0 2px #161054, 4px 4px 0 0 #ffffff; /* Lila Schatten beibehalten */
}

.dark-mode .button:hover {
    background-color: #ffd301; /* Gleiche Farbe wie im Light Mode */
    box-shadow: 0 0 0 2px #161054, 6px 6px 0 0 #ffffff; /* Lila Schatten beibehalten */
}

/* Additional Dark Mode Styles */
.dark-mode #search-input {
    background-color: #ffd301; 
    color: #000000;
    border-color: #ac35ff;
    box-shadow: 0 0 0 2px #161054, 4px 4px 0 0 #ffffff;
}

.dark-mode .game-title {
    background-color: rgba(0, 0, 0, 0.8);
    color: #ffd301;
}

/* Ensure modals adapt to dark mode */
.dark-mode .modal-content {
    background-color: #1e1e1e;
    color: #ffffff;
    border-color: #ac35ff;
    box-shadow: 0 0 0 3px #ffffff, 6px 6px 0 0 #ffffff; 
}

